--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,3 +84,17 @@ th {
     border: 1px solid black;
     padding: 5px;
 }
+nav {
+    width: 100%;
+}
+#banner {
+    width: 100%;
+    height: auto;
+}
+.service {
+    display: inline-block;
+    text-align: center;
+}
+.banner {
+    max-width: 400px;
+}
